using System.Collections;
using System.Collections.Generic;
using UnityEngine;

namespace Monsters.Skill
{
    public class SkillSet : MonoBehaviour
    {
        public virtual void Skill00()
        {
            
        }

        public virtual void Skill01()
        {
            
        }

        public virtual void Skill02()
        {
            
        }
    }
}